--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -9,6 +9,10 @@ body {
 
 body {
   font-family: var(--font-montreal);
+  user-select: none !important;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
 }
 
 @layer utilities {
