--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -194,21 +194,21 @@ body {
 
 .dotted-pattern {
   background-image: radial-gradient(
-    rgba(255, 255, 255, 0.2) 1.5px,
+    rgba(255, 255, 255, 0.3) 1.5px,
     transparent 1.5px
   );
   background-size: 5px 5px;
   mask-image: radial-gradient(
     circle at center,
     transparent 5%,
-    black 6.5%,
-    transparent 6.8%
+    black 10%,
+    transparent 15%
   );
   -webkit-mask-image: radial-gradient(
     circle at center,
     transparent 5%,
-    black 6.5%,
-    transparent 6.8%
+    black 10%,
+    transparent 15%
   );
   mask-repeat: no-repeat;
   -webkit-mask-repeat: no-repeat;
@@ -216,4 +216,13 @@ body {
   -webkit-mask-position: center;
   animation: ripple 1.5s linear;
   opacity: 0;
+}
+
+.ripple-cover {
+  background: linear-gradient(
+    to right,
+    transparent 0%,
+    hsl(var(--card)) 30%,
+    hsl(var(--card)) 100%
+  );
 }
