--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -207,6 +207,9 @@ body {
     transparent 1.5px
   );
   background-size: 5px 5px;
+}
+
+.ripple-mask {
   mask-image: radial-gradient(
     circle at center,
     transparent 5%,
@@ -287,4 +290,68 @@ body {
     #292524 -10%,
     hsl(var(--background)) 70%
   );
+}
+
+.h-animated {
+  animation: transformer-line 3s linear;
+}
+
+@keyframes transformer-line {
+  0% {
+    height: 0;
+    opacity: 0;
+  }
+  5% {
+    opacity: 1;
+  }
+  50% {
+    height: 100%;
+  }
+  95% {
+    opacity: 1;
+  }
+  100% {
+    height: 100%;
+    opacity: 0;
+  }
+}
+
+.transformer-pulse {
+  animation: transformer-pulse 3s linear;
+  opacity: 0;
+  mask-image: radial-gradient(
+    circle at center,
+    transparent 5%,
+    black 15%,
+    transparent 25%
+  );
+  -webkit-mask-image: radial-gradient(
+    circle at center,
+    transparent 5%,
+    black 15%,
+    transparent 25%
+  );
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-position: center;
+}
+
+@keyframes transformer-pulse {
+  0% {
+    opacity: 0;
+    mask-size: 2% 2%;
+    -webkit-mask-size: 2% 2%;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    mask-size: 1200% 1200%;
+    -webkit-mask-size: 1200% 1200%;
+  }
 }
